--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  path_provider: ^2.1.5
+  intl: ^0.20.2
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  google_sign_in: ^6.3.0
+  flutter_email_sender: ^7.0.0
+  image_picker: ^1.1.2
+  url_launcher: ^6.3.1
+  camera: ^0.11.1
 
 dev_dependencies:
   flutter_test:
